--- a/app/src/main/res/layout-normal/activity_main.xml
+++ b/app/src/main/res/layout-normal/activity_main.xml
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content">
 
             <Button
-                android:id="@+id/btn_date_alarm"
+                android:id="@+id/btn_one_time_date_alarm"
                 android:layout_width="50dp"
                 android:layout_height="39dp"
                 android:text="..."
@@ -45,7 +45,7 @@
                 tools:layout_editor_absoluteY="324dp" />
 
             <TextView
-                android:id="@+id/txt_date_alarm"
+                android:id="@+id/txt_one_time_date_alarm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="2016-09-27"
@@ -62,7 +62,7 @@
             android:layout_height="wrap_content">
 
             <Button
-                android:id="@+id/btn_time_alarm"
+                android:id="@+id/btn_one_time_time_alarm"
                 android:layout_width="50dp"
                 android:layout_height="39dp"
                 android:text="..."
@@ -70,7 +70,7 @@
                 tools:layout_editor_absoluteY="324dp" />
 
             <TextView
-                android:id="@+id/txt_time_alarm"
+                android:id="@+id/txt_one_time_time_alarm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="05:21"
