--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="15dp"
-            android:text="TextView"
+            android:text="One Time Alarm"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/button2"
             app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content">
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/btn_one_time_date_alarm"
                 android:layout_width="50dp"
                 android:layout_height="39dp"
                 android:text="..."
@@ -45,10 +45,10 @@
                 tools:layout_editor_absoluteY="324dp" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/txt_one_time_date_alarm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
+                android:text="2016-09-27"
                 tools:layout_editor_absoluteX="96dp"
                 tools:layout_editor_absoluteY="353dp" />
 
@@ -62,7 +62,7 @@
             android:layout_height="wrap_content">
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/btn_one_time_time_alarm"
                 android:layout_width="50dp"
                 android:layout_height="39dp"
                 android:text="..."
@@ -70,10 +70,10 @@
                 tools:layout_editor_absoluteY="324dp" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/txt_one_time_time_alarm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
+                android:text="05:21"
                 tools:layout_editor_absoluteX="96dp"
                 tools:layout_editor_absoluteY="353dp" />
 
@@ -83,7 +83,7 @@
         <EditText
 
             android:layout_marginBottom="@dimen/vertical_margin2"
-            android:id="@+id/editText2"
+            android:id="@+id/edt_one_time_alarm_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Pesan Alarm"
@@ -92,11 +92,10 @@
 
         <Button
 
-            android:layout_marginBottom="@dimen/vertical_margin2"
-            android:id="@+id/button3"
+            android:id="@+id/btn_one_time_alarm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="set one time alaram"
+            android:text="set one time alarm"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="261dp" />
 
@@ -112,10 +111,10 @@
         <TextView
 
             android:layout_marginBottom="@dimen/vertical_margin2"
-            android:id="@+id/textView2"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
+            android:text="Repeating Alarm"
             android:textStyle="bold"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="16dp" />
@@ -128,7 +127,7 @@
 
             <Button
 
-                android:id="@+id/button2"
+                android:id="@+id/btn_repeating_alarm_time"
                 android:layout_width="50dp"
                 android:layout_height="39dp"
                 android:text="..."
@@ -136,10 +135,10 @@
                 tools:layout_editor_absoluteY="324dp" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/txt_repeating_alarm_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
+                android:text="14:50"
                 tools:layout_editor_absoluteX="96dp"
                 tools:layout_editor_absoluteY="353dp" />
 
@@ -150,7 +149,7 @@
         <EditText
 
             android:layout_marginBottom="@dimen/vertical_margin2"
-            android:id="@+id/editText"
+            android:id="@+id/edt_repeating_alarm_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Pesan Alarm"
@@ -168,12 +167,14 @@
             tools:layout_editor_absoluteY="432dp">
 
             <Button
+                android:id="@+id/btn_repeating_alarm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1.5"
                 android:text="set repeating alarm" />
 
             <Button
+                android:id="@+id/btn_cancel_repeating_alarm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
